third_party/move/move-compiler-v2/tests/checking/typing/recursive_constant.exp

Diagnostics:
error: Found recursive definition of a constant
  ┌─ tests/checking/typing/recursive_constant.move:4:5
  │
4 │     const Y: u64 = X;
  │     ^^^^^^^^^^^^^^^^^
